--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
 Django==1.7.4
+Pillow==2.8.1
 SQLAlchemy==0.9.8
 dj-database-url==0.3.0
 django-postgrespool==0.3.0
+djangorestframework==3.1.0
 gunicorn==19.2.1
 psycopg2==2.6
 whitenoise==1.0.6
-
-djangorestframework==3.1.0
